<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="bottom">
    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "0dp"
        android:orientation="vertical"
        android:layout_weight = "6"
        android:gravity="bottom"
        android:background="#FFFFF0"
        >

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="48sp"
            android:gravity="bottom|right"/>
        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="bottom|right"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight = "1"
    android:orientation="horizontal"
    android:weightSum="5"
    >
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vary"
        android:textSize="24sp"
        android:id="@+id/btn_vary"
        android:layout_weight="1"
        android:background="#FFFFE0"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sin"
        android:textSize="24sp"
        android:id="@+id/btn_sin"
        android:layout_weight="1"
        android:background="#ffffff"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cos"
        android:textSize="24sp"
        android:id="@+id/btn_cos"
        android:layout_weight="1"
        android:background="#ffffff"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tan"
        android:textSize="24sp"
        android:id="@+id/btn_tan"
        android:layout_weight="1"
        android:background="#ffffff"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cot"
        android:textSize="24sp"
        android:id="@+id/btn_cot"
        android:layout_weight="1"
        android:background="#ffffff"/>
</LinearLayout>    
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight = "1"
    android:orientation="horizontal"
    android:weightSum="5"
    >
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pow"
        android:textSize="24sp"
        android:id="@+id/btn_pow"
        android:layout_weight="1"
        android:background="#FFFFFF"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lg"
        android:textSize="24sp"
        android:id="@+id/btn_lg"
        android:layout_weight="1"
        android:background="#ffffff"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ln"
        android:textSize="24sp"
        android:id="@+id/btn_ln"
        android:layout_weight="1"
        android:background="#ffffff"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:textSize="24sp"
        android:id="@+id/btn_left"
        android:layout_weight="1"
        android:background="#ffffff"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:textSize="24sp"
        android:id="@+id/btn_right"
        android:layout_weight="1"
        android:background="#ffffff"/>
</LinearLayout>
<LinearLayout
android:layout_width="wrap_content"
android:layout_height="0dp"
android:layout_weight = "1"
android:orientation="horizontal"
android:weightSum="5"
    >
<Button
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/cube"
    android:textSize="24sp"
    android:id="@+id/btn_cube"
    android:layout_weight="1"
    android:background="#FFFFFF"/>
<Button
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/c"
    android:textSize="24sp"
    android:id="@+id/btn_clear"
    android:layout_weight="1"
    android:background="#ffffff"
    android:textColor="#000000"/>
<Button
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/del"
    android:textSize="24sp"
    android:id="@+id/btn_del"
    android:layout_weight="1"
    android:background="#ffffff"/>
<Button
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/mod"
    android:textSize="24sp"
    android:id="@+id/btn_mod"
    android:layout_weight="1"
    android:background="#ffffff"/>
<Button
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/divide"
    android:textSize="24sp"
    android:id="@+id/btn_divide"
    android:layout_weight="1"
    android:background="#ffffff"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:weightSum="5"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/square"
            android:textSize="24sp"
            android:id="@+id/btn_square"
            android:layout_weight="1"
            android:background="#ffffff"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:textSize="24sp"
            android:id="@+id/btn_7"
            android:layout_weight="1"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:textSize="24sp"
            android:id="@+id/btn_8"
            android:layout_weight="1"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:textSize="24sp"
            android:id="@+id/btn_9"
            android:layout_weight="1"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mul"
            android:textSize="24sp"
            android:id="@+id/btn_mul"
            android:layout_weight="1"
            android:background="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="5"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sqrt"
            android:textSize="24sp"
            android:id="@+id/btn_sqrt"
            android:layout_weight="1"
            android:background="#ffffff"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textSize="24sp"
            android:id="@+id/btn_4"
            android:layout_weight="1"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textSize="24sp"
            android:id="@+id/btn_5"
            android:layout_weight="1"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textSize="24sp"
            android:id="@+id/btn_6"
            android:layout_weight="1"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="24sp"
            android:id="@+id/btn_minus"
            android:layout_weight="1"
            android:background="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="5"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/euler"
            android:textSize="24sp"
            android:id="@+id/btn_euler"
            android:layout_weight="1"
            android:background="#ffffff"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textSize="24sp"
            android:id="@+id/btn_1"
            android:layout_weight="1"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="24sp"
            android:id="@+id/btn_2"
            android:layout_weight="1"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="24sp"
            android:id="@+id/btn_3"
            android:layout_weight="1"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="24sp"
            android:id="@+id/btn_plus"
            android:layout_weight="1"
            android:background="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="5"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pi"
            android:textSize="24sp"
            android:id="@+id/btn_pi"
            android:layout_weight="1"
            android:background="#ffffff"
        />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="arc"
            android:textSize="24sp"
            android:id="@+id/btn_arc"
            android:layout_weight="1"
            android:background="#ffffff"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="24sp"
            android:id="@+id/btn_0"
            android:background="#FFFFFF"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textSize="24sp"
            android:id="@+id/btn_point"
            android:layout_weight="1"
            android:background="#FFFFFF"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:textSize="24sp"
            android:id="@+id/btn_equal"
            android:background="#99CCFF"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>